Link native aar with wildcard for configuration

--- a/xamarin/Lemon.Android.Binding/Lemon.Android.Binding.csproj
+++ b/xamarin/Lemon.Android.Binding/Lemon.Android.Binding.csproj
@@ -54,9 +54,7 @@
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="..\..\android\lemonlib\build\outputs\aar\lemonlib-release.aar">
-      <Link>Jars\lemonlib-release.aar</Link>
-    </LibraryProjectZip>
+    <LibraryProjectZip Include="Jars\lemonlib-*.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
